--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -1,14 +1,12 @@
 name: Deploy to EC2
 
 on:
-  pull_request:
+  push:
     branches:
       - main
-    types: [closed]
 
 jobs:
   deployment:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
