--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.3",
     "@mui/material-nextjs": "^6.1.3",
+    "@prisma/client": "^5.20.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
@@ -24,6 +25,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
+    "prisma": "^5.20.0",
     "typescript": "^5"
   }
 }
