--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "eslint-config-next": "14.2.15",
     "prisma": "^5.20.0",
     "typescript": "^5"
+  },
+  "volta": {
+    "node": "22.9.0",
+    "npm": "10.9.0"
   }
 }
