--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@prisma/client": "^5.20.0",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.53.0"
   },
   "devDependencies": {
     "@types/node": "^20",
