--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
     "@mui/material-nextjs": "^6.1.3",
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "^5.21.0",
+    "dayjs": "^1.11.13",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.53.0"
+    "react-hook-form": "^7.53.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -27,7 +30,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
-    "prisma": "^5.20.0",
+    "prisma": "^5.21.0",
     "typescript": "^5"
   },
   "volta": {
