--- a/package.json
+++ b/package.json
@@ -25,16 +25,20 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.16.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "prisma": "^5.21.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   },
   "volta": {
     "node": "22.9.0",
     "npm": "10.9.0"
+  },
+ "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
